--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,9 +54,10 @@ layout: default
       </div>
       <img style="width: 100%" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
     </div>
+    
     <!-- Feature 2 -->
     <div class="row">
-      <div class="col-lg-12 text-center feature-heading">
+      <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	{%- for content in site.data.home.features.two.heading -%}
 	<h2>{{ content }}</h2>
 	{%- endfor -%}
@@ -71,12 +72,15 @@ layout: default
       {%- endfor -%}
     </div>
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%; padding: 2em 0;">
+    
     <!-- Feature 3 -->
     <div class="row">
-      <div class="col-lg-12 text-center feature-heading">
+      <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	<h2>{{ site.data.home.features.three.heading }}</h2>
+      </div>
+      <div class="col-lg-12 text-center">
 	<h4>{{ site.data.home.features.three.text }}</h4>
-	<img style="width: 100%" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
+	<img style="width: 100%; margin: 3em" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
       </div>
     </div>		 
   </div>
@@ -87,7 +91,7 @@ layout: default
 <section id="testimonial">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-center mb-4">
 	<h2 class="text-uppercase">{{ site.data.home.testimonial.section-heading }}</h2>
       </div>
     </div>
@@ -99,11 +103,11 @@ layout: default
         <div class="gradient-standout">   
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
-        <div>
-          <h4 class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
+        <div class="mb-4">
+          <h4>{{ site.data.home.testimonial.credentials }}</h4>  
         </div>
-        <blockquote>
-          <p class="">{{ site.data.home.testimonial.text }}</p>
+        <blockquote style="font-size: 1.2em">
+          <p>{{ site.data.home.testimonial.text }}</p>
         </blockquote> 
       </div>
     </div>	
